# notebooklm_automation

./: .gitignore  README.md  pyproject.toml  query.md  requirements.txt
.github/workflows/: ci.yml
src/: command_line_wrapper.py  main.py  nlmbatch.py  nlmquery.py  nlmsource.py
src/helpers/: __init__.py  auth.py  cli.py  formatter.py  utils.py
tests/: conftest.py  test_cli_parsers.py  test_nlmbatch.py
