[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-automation"
version = "0.1.0"
description = "Automated upload and querying of PDF sources using NotebookLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebooklm-mcp-cli>=0.5.17",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "build>=1.2.0",
]

[project.scripts]
nlmsource = "nlmsource:main"
nlmquery = "nlmquery:main"

[tool.setuptools]
py-modules = ["nlmsource", "nlmquery", "main", "command_line_wrapper"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
package = true
